<resources>
    <string name="app_name">MedicineReminderNew</string>
    <string name="title1">Добро пожаловать</string>
    <string name="title2">Учетная запись</string>
    <string name="title3">Уведомления</string>
    <string name="title4">Инсулин</string>
    <string name="description1">Приложение Medicine Reminder поможет вам не забыть про своевременный  прием лекарств.</string>
    <string name="description2">Ваши данные не потеряются, главное зарегистрироваться или войти с помощью учетной записи Gooogle</string>
    <string name="description3">Наличие напоминание в виде уведомлений за 15 минут до начала приема и будильник на указанное время</string>
    <string name="description4">Наличие калькулятора болюса и хлебных единиц.</string>
    <string name="welcome">Добро             пожаловать</string>
    <string name="SUBMIT">Войти</string>
    <string name="time">
        15:00
    </string>
    <string name="date">
        22.02.2022

    </string>
    <string name="name">
        Парацетомол
    </string>

    <string name="medicine_re">
MEDICINE\nREMINDER
</string>

    <string name="kl">3 раза в сутки</string>
    <string name="nam">
    Название
</string>
    <string name="dos">Дозировка</string>
    <string name="dose">250 мг</string>
    <string name="timeall">15:00,18:00,21:00</string>
    <string name="kl2">3 раза в сутки           |</string>

    <string-array name="lang">
        <item>Русский</item>
        <item>Английский</item>
        <item>Немецкий</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>