<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tm_"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/time"
            android:textAppearance="@style/time"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:layout_marginTop="15dp"
            android:text="@string/date"
            android:textAppearance="@style/date"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="230dp"
            android:layout_marginRight="60dp"
            android:text="@string/name"
            android:textAlignment="center" />

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
